<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_loading_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/md_grey_100" />

    <TextView
        android:id="@+id/dialog_message_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:textColor="@color/md_black_300"
        android:textSize="@dimen/sp_14"
        tools:text="退出登录" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tips_cancel"
            android:textColor="@color/md_black_300" />

        <TextView
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tips_confirm"
            android:textColor="@color/md_selected_blue" />

    </LinearLayout>
</LinearLayout>