<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyDialog"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_loading_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_size_sort_small_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@drawable/bg_btn_no_radius"
            android:text="@string/tips_text_size_small"
            android:textColor="@color/md_black_300"
            android:textSize="@dimen/sp_12"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_30" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/md_grey_300" />

    <RelativeLayout
        android:id="@+id/view_size_sort_middle_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@drawable/bg_btn_no_radius"
            android:text="@string/tips_text_size_middle"
            android:textColor="@color/md_black_300"
            android:textSize="@dimen/sp_14"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_30"
            android:checked="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/md_grey_300" />

    <RelativeLayout
        android:id="@+id/view_size_sort_big_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@drawable/bg_btn_no_radius"
            android:text="@string/tips_text_size_big"
            android:textColor="@color/md_black_300"
            android:textSize="@dimen/sp_16"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_30" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/md_grey_300" />

    <RelativeLayout
        android:id="@+id/view_size_sort_super_big_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@drawable/bg_btn_no_radius"
            android:text="@string/tips_text_size_super_big"
            android:textColor="@color/md_black_300"
            android:textSize="@dimen/sp_18"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_30" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/md_grey_300" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/view_sort_cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:button="@null"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/dp_30"
        android:text="@string/tips_cancel"
        android:textColor="@color/md_black_300"
        android:textSize="@dimen/sp_14" />

</LinearLayout>